--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ python:
   - "2.6"
   - "2.7"
   - "3.4"
-install: pip install -r requirements.txt
+install:
+  - pip install -r requirements.txt
+  - pip install coveralls
 script: make check
+after_success: coveralls
 notifications:
   email: false
