--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
+flake8==3.2.1; python_version >= '2.7'
 pep8==1.7.0
-pyflakes==1.5.0
 pytest==3.0.5
 pytest-cov==2.4.0
 pytest-asyncio==0.5.0; python_version >= '3.4'
