Support python 3.7; drop async python 3.4
To maintain async python 3.4 support we'd have to fork the
implementations like we did for sync vs async.  The maintenance
burden for doing that would be high and I think it's more
important that we support 3.7 than that we support async 3.4.

Note that syncronous 3.4 is still supported.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,14 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
+  - "3.7"
 matrix:
   include:
   - python: "3.5"
     env: PYTHONASYNCIODEBUG=x
   - python: "3.6"
+    env: PYTHONASYNCIODEBUG=x
+  - python: "3.7"
     env: PYTHONASYNCIODEBUG=x
 install:
   - pip install -r requirements.txt
