--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ flake8 = "^3.6"
 pytest = "^4.0"
 pytest-cov = "^2.6"
 pytest-asyncio = {version = "^0.9.0",python = "^3.5"}
+poetry-setup = "^0.3.6"
 
 [build-system]
 requires = ["poetry>=0.12"]
