--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ flake8 = "^3.9.0"
 pytest = "^6.2.2"
 pytest-cov = "^2.11.1"
 pytest-asyncio = "^0.14.0"
+mypy = "^0.812"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
