--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ pytest = "^6.2.2"
 pytest-cov = "^2.11.1"
 pytest-asyncio = "^0.14.0"
 mypy = "^0.812"
+requests = "^2.26.0"
+responses = "^0.13.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
