--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ classifiers = ['Development Status :: 5 - Production/Stable',
                'Topic :: Utilities']
 packages = [
     { include = "backoff" },
+    { include = "tests", format = "sdist" },
 ]
 
 [tool.poetry.dependencies]
