--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
+        with:
+          python-version: 3.x
       - run: pip install --upgrade pip wheel
       - run: pip install bandit black codespell flake8 flake8-2020 flake8-bugbear
                          flake8-comprehensions isort mypy pytest pyupgrade safety
@@ -23,9 +25,11 @@ jobs:
   test_python:
     runs-on: ubuntu-latest
     steps:
+      - run: pipx install poetry
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-      - run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
-      - run: pip install poetry more-itertools
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.x
+      - run: pip install more-itertools
       - run: poetry install
       - run: poetry run make check
